Removed testing tags

--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -40,6 +40,8 @@
   "item.forgero.vein_mining": "Vein Mining",
   "item.forgero.pattern_mining": "Pattern mining",
   "item.forgero.soul_reaping": "Soul Reaping",
+  "item.forgero.unbreakable": "Unbreakable",
+  "item.forgero.broken": "Disabled",
   "item.forgero.ingredients": "Ingredients",
   "item.forgero.sword_tip": "Sword tip",
   "item.forgero.sword_blade": "Sword blade",
