Fixed attribute entity target

--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -43,6 +43,7 @@
   "item.forgero.soul_reaping": "Soul Reaping",
   "item.forgero.unbreakable": "Unbreakable",
   "item.forgero.broken": "Disabled",
+  "item.forgero.pig_affinity": "Pig Affinity",
   "item.forgero.ingredients": "Ingredients",
   "item.forgero.sword_tip": "Sword tip",
   "item.forgero.sword_blade": "Sword blade",
