--- a/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -3,6 +3,7 @@
   "itemGroup.forgero.trinkets": "Trinkets",
   "itemGroup.forgero.materials": "Materials",
   "item.forgero.gem": "Gem",
+  "item.forgero.soul": "Soul",
   "item.forgero.totem": "Totem",
   "item.forgero.undying": "Undying",
   "item.forgero.emerald": "Emerald",
