--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -15,6 +15,8 @@
   "item.forgero.dark_oak": "Dark oak",
   "item.forgero.stone": "Stone",
   "item.forgero.iron": "Iron",
+  "item.forgero.flint": "Flint",
+  "item.forgero.obsidian": "obsidian",
   "item.forgero.gold": "Gold",
   "item.forgero.copper": "Copper",
   "item.forgero.diorite": "Diorite",
