--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -16,7 +16,8 @@
   "item.forgero.stone": "Stone",
   "item.forgero.iron": "Iron",
   "item.forgero.flint": "Flint",
-  "item.forgero.obsidian": "obsidian",
+  "item.forgero.obsidian": "Obsidian",
+  "item.forgero.bone": "Bone",
   "item.forgero.gold": "Gold",
   "item.forgero.copper": "Copper",
   "item.forgero.diorite": "Diorite",
