--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -17,6 +17,7 @@
   "item.forgero.iron": "Iron",
   "item.forgero.flint": "Flint",
   "item.forgero.obsidian": "Obsidian",
+  "item.forgero.quartz": "Quartz",
   "item.forgero.bone": "Bone",
   "item.forgero.gold": "Gold",
   "item.forgero.copper": "Copper",
