Implemented transitive conditions

--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -34,7 +34,7 @@
   "item.forgero.honed": "Honed",
   "item.forgero.light": "Light",
   "item.forgero.lucky": "Lucky",
-  "item.forgero.mighty": "Might",
+  "item.forgero.mighty": "Mighty",
   "item.forgero.nimble": "nimble",
   "item.forgero.protective": "Protective",
   "item.forgero.quick": "Quick",
