Added kuruk pelt

--- a/forgero-creatures/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-creatures/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "entity.forgero.kuruk": "Kuruk",
-  "item.forgero.kuruk_heart": "Kuruk heart"
+  "item.forgero.kuruk_heart": "Kuruk heart",
+  "item.forgero.kuruk_pelt": "Kuruk pelt"
 }
