--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -27,6 +27,7 @@
   "advancements.forgero.secondary.title": "Double layers!",
   "advancements.forgero.secondary.description": "Opportunities o' plenty",
   "item.forgero.attack_speed": "Attack speed",
+  "item.forgero.conditions": "Conditions",
   "item.forgero.rare": "Rare",
   "item.forgero.durability": "Durability",
   "item.forgero.attack_damage": "Attack damage",
