Updated redstone gem achievement

--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -24,6 +24,8 @@
   "advancements.forgero.schematic_dense.description": "Find your first dense schematic",
   "advancements.forgero.gem.title": "Shiny upgrade",
   "advancements.forgero.gem.description": "Craft your first gem",
+  "advancements.forgero.redstone-gem.title": "Power up!",
+  "advancements.forgero.redstone-gem.description": "Create a redstone gem",
   "advancements.forgero.secondary.title": "Double layers!",
   "advancements.forgero.secondary.description": "Opportunities o' plenty",
   "item.forgero.attack_speed": "Attack speed",
