Fixed vines lang Fixed betterCombat shadow field

--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "item.forgero.scrappy_binding": "Scrappy binding",
   "item.forgero.string": "String",
-  "item.forgero.vine": "Vines",
+  "item.forgero.vines": "Vines",
   "item.forgero.twisting_vines": "Twisting Vines",
   "item.forgero.weeping_vines": "Weeping Vines",
   "item.forgero.secondary_material": "Soft Material",
