--- a/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -15,37 +15,37 @@
   "item.forgero.blazed_stone_heart": "Blazed Stoneheart",
   "item.forgero.magnetico": "Magnetico",
   "item.forgero.quartz": "Quartz",
-  "item.forgero.tsuba_sword_guard": "Tsuba guard",
-  "item.forgero.duelling_sword_guard": "Duelling guard",
-  "item.forgero.agile_sword_guard": "Agile guard",
-  "item.forgero.polar_bear_pelt": "Polar bear pelt",
-  "item.forgero.katana_blade": "Katana blade",
-  "item.forgero.broadsword_blade": "Broadsword blade",
-  "item.forgero.shortsword_blade": "Shortsword blade",
-  "item.forgero.refined_sword_blade": "Refined Sword blade",
-  "item.forgero.mastercrafted_sword_blade": "Mastercrafted Sword blade",
-  "item.forgero.serrated_sword_blade": "Serrated Sword blade",
-  "item.forgero.scimitar_blade": "Scimitar blade",
-  "item.forgero.rapier_blade": "Rapier blade",
-  "item.forgero.knife_blade": "Knife blade",
-  "item.forgero.sacrificial_dagger_blade": "Sacrificial dagger blade",
-  "item.forgero.slanted_sword_blade": "Slanted sword blade",
-  "item.forgero.battle_axe_head": "Battle Axe head",
-  "item.forgero.tree_chopper_head": "Tree chopper head",
-  "item.forgero.tree_feller_head": "Tree feller head",
-  "item.forgero.path_digger_shovel_head": "Path Digger head",
-  "item.forgero.grave_digger_head": "Grave Digger head",
-  "item.forgero.lightweight_pickaxe_head": "Lightweight Pickaxe head",
+  "item.forgero.tsuba_sword_guard": "Tsuba Guard",
+  "item.forgero.duelling_sword_guard": "Duelling Guard",
+  "item.forgero.agile_sword_guard": "Agile Guard",
+  "item.forgero.polar_bear_pelt": "Polar Bear Pelt",
+  "item.forgero.katana_blade": "Katana Blade",
+  "item.forgero.broadsword_blade": "Broadsword Blade",
+  "item.forgero.shortsword_blade": "Shortsword Blade",
+  "item.forgero.refined_sword_blade": "Refined Sword Blade",
+  "item.forgero.mastercrafted_sword_blade": "Mastercrafted Sword Blade",
+  "item.forgero.serrated_sword_blade": "Serrated Sword Blade",
+  "item.forgero.scimitar_blade": "Scimitar Blade",
+  "item.forgero.rapier_blade": "Rapier Blade",
+  "item.forgero.knife_blade": "Knife Blade",
+  "item.forgero.sacrificial_dagger_blade": "Sacrificial Dagger Blade",
+  "item.forgero.slanted_sword_blade": "Slanted Sword Blade",
+  "item.forgero.battle_axe_head": "Battle Axe Head",
+  "item.forgero.tree_chopper_head": "Tree Chopper Head",
+  "item.forgero.tree_feller_head": "Tree Feller Head",
+  "item.forgero.path_digger_shovel_head": "Path Digger Head",
+  "item.forgero.grave_digger_head": "Grave Digger Head",
+  "item.forgero.lightweight_pickaxe_head": "Lightweight Pickaxe Head",
   "description.forgero.lightweight_pickaxe_head": "A light, yet powerful pickaxe head",
-  "item.forgero.refined_pickaxe_head": "Refined Pickaxe head",
-  "item.forgero.ore_miner_pickaxe_head": "Ore mining pickaxe head",
-  "item.forgero.reaper_head": "Reaper head",
-  "item.forgero.refined_hoe_head": "Refined hoe head",
-  "item.forgero.mastercrafted_hoe_head": "Mastercrafted hoe head",
+  "item.forgero.refined_pickaxe_head": "Refined Pickaxe Head",
+  "item.forgero.ore_miner_pickaxe_head": "Ore Mining Pickaxe Head",
+  "item.forgero.reaper_head": "Reaper Head",
+  "item.forgero.refined_hoe_head": "Refined Hoe Head",
+  "item.forgero.mastercrafted_hoe_head": "Mastercrafted Hoe Head",
   "description.forgero.refined_pickaxe_head": "A classic, but significantly improved pickaxe head",
-  "item.forgero.mastercrafted_pickaxe_head": "Mastercrafted Pickaxe head",
+  "item.forgero.mastercrafted_pickaxe_head": "Mastercrafted Pickaxe Head",
   "description.forgero.mastercrafted_pickaxe_head": "A truly masterfully designed pickaxe head, better in every way",
-  "item.forgero.path_mining_pickaxe_head": "Path Mining Pickaxe head",
+  "item.forgero.path_mining_pickaxe_head": "Path Mining Pickaxe Head",
   "description.forgero.path_mining_pickaxe_head": "A unique pickaxe head, capable of mining a perfect corridor",
   "item.forgero.adamantite": "Adamantite",
   "item.forgero.aquarium": "Aquarium",
