--- a/forgero-forge/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-forge/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "block.forgero.assembly_station": "Assembly station",
+  "block.forgero.assembly_station": "Assembly Station",
   "itemGroup.forgero.forgero": "Forgero",
   "util.forgero.name_separator": " ",
   "advancements.forgero.root.title": "A world of possibilities",
@@ -37,30 +37,30 @@
   "item.forgero.attributes": "Attributes",
   "item.forgero.properties": "Properties",
   "item.forgero.vein_mining": "Vein Mining",
-  "item.forgero.pattern_mining": "Pattern mining",
+  "item.forgero.pattern_mining": "Pattern Mining",
   "item.forgero.soul_reaping": "Soul Reaping",
   "item.forgero.ingredients": "Ingredients",
   "item.forgero.sword_tip": "Sword tip",
-  "item.forgero.sword_blade": "Sword blade",
-  "item.forgero.saber_blade": "Saber blade",
+  "item.forgero.sword_blade": "Sword Blade",
+  "item.forgero.saber_blade": "Saber Blade",
   "itemGroup.forgero.weapons": "Weapons",
   "itemGroup.forgero.tools": "Tools",
   "itemGroup.forgero.parts": "Parts",
   "itemGroup.forgero.schematics": "Schematics",
   "item.forgero.scabbard": "Scabbard",
-  "item.forgero.empty_repair_kit": "Empty repair kit",
-  "item.forgero.spiked_binding": "Spiked binding",
-  "item.forgero.sword_guard": "Sword guard",
-  "item.forgero.kimiri_sword_guard": "Kimiri sword guard",
+  "item.forgero.empty_repair_kit": "Empty Repair Kit",
+  "item.forgero.spiked_binding": "Spiked Binding",
+  "item.forgero.sword_guard": "Sword Guard",
+  "item.forgero.kimiri_sword_guard": "Kimiri Sword Guard",
   "item.forgero.pummel": "Pummel",
   "item.forgero.grip": "Grip",
-  "item.forgero.vein_pickaxe_head": "Vein Pickaxe head",
-  "item.forgero.vein_axe_head": "Vein Axe head",
-  "item.forgero.pickaxe_head": "Pickaxe head",
-  "item.forgero.axe_head": "Axe head",
-  "item.forgero.shovel_head": "Shovel head",
+  "item.forgero.vein_pickaxe_head": "Vein Pickaxe Head",
+  "item.forgero.vein_axe_head": "Vein Axe Head",
+  "item.forgero.pickaxe_head": "Pickaxe Head",
+  "item.forgero.axe_head": "Axe Head",
+  "item.forgero.shovel_head": "Shovel Head",
   "item.forgero.tool_binding": "Binding",
-  "item.forgero.hoe_head": "Hoe head",
+  "item.forgero.hoe_head": "Hoe Head",
   "item.forgero.material": "Materials",
   "item.forgero.tool_material": "Tool Materials",
   "item.forgero.wood": "Wood",
@@ -69,7 +69,7 @@
   "item.forgero.trinket": "Trinket",
   "item.forgero.magnetico": "Magnetico",
   "item.forgero.tip_reinforcement": "Tip reinforcement",
-  "item.forgero.mastercrafted_handle": "Mastercrafted handle",
+  "item.forgero.mastercrafted_handle": "Mastercrafted Handle",
   "item.forgero.reinforcement": "Reinforcement",
   "item.forgero.magnetico_gem": "Magnetico Gem",
   "item.forgero.handle": "Handle",
@@ -80,25 +80,25 @@
   "item.forgero.hoe": "Hoe",
   "item.forgero.axe": "Axe",
   "item.forgero.broadsword": "Broadsword",
-  "item.forgero.short_sword": "Short sword",
+  "item.forgero.short_sword": "Short Sword",
   "item.forgero.saber": "Saber",
   "item.forgero.tachi": "Tachi",
-  "item.forgero.saberhead": "Saber blade",
-  "item.forgero.broadswordhead": "Broadsword blade",
-  "item.forgero.short_swordhead": "Short sword blade",
-  "item.forgero.knifehead": "Knife blade",
-  "item.forgero.tachihead": "Tachi blade",
-  "item.forgero.dense_handle": "Dense handle",
-  "item.forgero.reinforced_handle": "Reinforced handle",
+  "item.forgero.saberhead": "Saber Blade",
+  "item.forgero.broadswordhead": "Broadsword Blade",
+  "item.forgero.short_swordhead": "Short Sword Blade",
+  "item.forgero.knifehead": "Knife Blade",
+  "item.forgero.tachihead": "Tachi Blade",
+  "item.forgero.dense_handle": "Dense Handle",
+  "item.forgero.reinforced_handle": "Reinforced Handle",
   "item.forgero.kimiri_binding": "Kimiri Binding",
   "item.forgero.tsuba_binding": "Tsuba Binding",
   "item.forgero.pattern_axe": "Axe",
-  "item.forgero.pattern_axehead": "Pattern mining Axe head",
+  "item.forgero.pattern_axehead": "Pattern Mining Axe Head",
   "item.forgero.knife": "Knife",
   "item.forgero.pickaxe": "Pickaxe",
   "item.forgero.shovel": "Shovel",
-  "item.forgero.hoehead": "Hoe head",
-  "item.forgero.swordhead": "Sword blade",
+  "item.forgero.hoehead": "Hoe Head",
+  "item.forgero.swordhead": "Sword Blade",
   "item.forgero.shovelhead": "Shovelhead",
   "item.forgero.axehead": "Axehead",
   "item.forgero.schematic": "Schematic",
