--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "item.forgero.scrappy_binding": "Scrappy binding",
+  "item.forgero.scrappy_binding": "Scrappy Binding",
   "item.forgero.string": "String",
   "item.forgero.vines": "Vines",
   "item.forgero.twisting_vines": "Twisting Vines",
@@ -12,7 +12,7 @@
   "item.forgero.birch": "Birch",
   "item.forgero.acacia": "Acacia",
   "item.forgero.jungle": "Jungle",
-  "item.forgero.dark_oak": "Dark oak",
+  "item.forgero.dark_oak": "Dark Oak",
   "item.forgero.stone": "Stone",
   "item.forgero.iron": "Iron",
   "item.forgero.gold": "Gold",
@@ -24,8 +24,8 @@
   "item.forgero.leather": "Leather",
   "item.forgero.warped": "Warped",
   "item.forgero.crimson": "Crimson",
-  "item.forgero.rabbit_hide": "Rabbit hide",
-  "item.forgero.phantom_membrane": "Phantom membrane",
+  "item.forgero.rabbit_hide": "Rabbit Hide",
+  "item.forgero.phantom_membrane": "Phantom Membrane",
   "item.forgero.diamond": "Diamond",
   "item.forgero.netherite": "Netherite",
   "item.forgero.carved": "Carved",
@@ -35,7 +35,7 @@
   "item.forgero.light": "Light",
   "item.forgero.lucky": "Lucky",
   "item.forgero.mighty": "Mighty",
-  "item.forgero.nimble": "nimble",
+  "item.forgero.nimble": "Nimble",
   "item.forgero.protective": "Protective",
   "item.forgero.quick": "Quick",
   "item.forgero.rapid": "Rapid",
