Added shift right click trigger

--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -115,6 +115,9 @@
   "tooltip.forgero.section.attributes": "Attributes",
   "tooltip.forgero.section.base_attributes": "Base attributes",
   "tooltip.forgero.section.upgrade_attributes": "Upgrade attributes",
+  "tooltip.forgero.hold": "Hold ",
+  "tooltip.forgero.shift": "Shift",
+  "tooltip.forgero.to_show_attributes": " to show attributes",
   "tooltip.forgero.section.all": "All",
   "tooltip.forgero.section.utility": "Utility",
   "tooltip.forgero.section.offensive": "Offensive",
