Palette updates for the full vanilla line up. Most palettes are simplified with alot less colors that where not used. Cleaned up textures to make them fit vanilla standards. Added mangrove

--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -12,6 +12,7 @@
   "item.forgero.birch": "Birch",
   "item.forgero.acacia": "Acacia",
   "item.forgero.jungle": "Jungle",
+  "item.forgero.mangrove": "Mangrove",
   "item.forgero.dark_oak": "Dark Oak",
   "item.forgero.stone": "Stone",
   "item.forgero.iron": "Iron",
