AE2 materials support (#467)

--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -94,6 +94,9 @@
   "item.forgero.titanium": "Titanium",
   "item.forgero.titanium_gold": "Titanium Gold",
   "item.forgero.constantan": "Constantan",
-  "item.forgero.therrassium": "Therrassium"
+  "item.forgero.therrassium": "Therrassium",
+  "item.forgero.nether_quartz": "Nether Quartz",
+  "item.forgero.certus_quartz": "Certus Quartz",
+  "item.forgero.fluix": "Fluix"
 }
 
