--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -115,14 +115,25 @@
   "tooltip.forgero.section.attributes": "Attributes",
   "tooltip.forgero.section.base_attributes": "Base attributes",
   "tooltip.forgero.section.upgrade_attributes": "Upgrade attributes",
+  "tooltip.forgero.section.features": "Features",
   "tooltip.forgero.hold": "Hold [",
   "tooltip.forgero.shift": "Shift",
   "tooltip.forgero.to_show_attributes": "] to show attributes",
+  "tooltip.forgero.feature.vein_mining": "Vein Mining",
+  "tooltip.forgero.feature.block_breaking_pattern": "Pattern Mining",
+  "tooltip.forgero.feature.effective_blocks": "Effectiveness",
+  "tooltip.forgero.feature.golden": "Golden",
+  "tooltip.forgero.feature.emissive": "Emissive",
+  "tooltip.forgero.feature.soul_reaping": "Soul Reaping",
+  "tooltip.forgero.feature.soul_binding": "Soul Binding",
+  "tooltip.forgero.feature.magnetic": "Magnetic",
+  "tooltip.forgero.depth": "Depth",
   "tooltip.forgero.section.all": "All",
   "tooltip.forgero.section.utility": "Utility",
   "tooltip.forgero.section.offensive": "Offensive",
   "tooltip.forgero.section.defensive": "Defensive",
   "tooltip.forgero.section.section_separator": ":",
+  "tooltip.forgero.separator": ":",
   "tooltip.forgero.attribute.multiplier": "x",
   "tooltip.forgero.attribute.attack_damage": "Attack Damage",
   "tooltip.forgero.attribute.durability": "Durability",
@@ -132,6 +143,11 @@
   "tooltip.forgero.attribute.attack_speed": "Attack speed",
   "tooltip.forgero.attribute.armor": "Armor",
   "tooltip.forgero.against": "Against: ",
+  "tooltip.forgero.tag.minecraft.mineable.pickaxe": "Pickaxe",
+  "tooltip.forgero.tag.minecraft.mineable.axe": "Axe",
+  "tooltip.forgero.tag.minecraft.mineable.shovel": "Shovel",
+  "tooltip.forgero.tag.minecraft.mineable.hoe": "Hoe",
+  "tooltip.forgero.tag.minecraft.mineable.sword": "Sword",
   "tooltip.forgero.tag.minecraft.base_stone_nether": "Nether Blocks",
   "tooltip.forgero.tag.minecraft.base_stone_overworld": "Stone Blocks"
 }
