Added new EntityAttributes Added sectionswriter Added TooltipConfigurations

--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -112,13 +112,17 @@
   "item.forgero.schematic": "Schematic",
   "item.forgero.dense": "Dense",
   "item.forgero.reinforced": "Reinforced",
+  "tooltip.forgero.section.slots": "Slots",
   "tooltip.forgero.section.attributes": "Attributes",
   "tooltip.forgero.section.base_attributes": "Base attributes",
   "tooltip.forgero.section.upgrade_attributes": "Upgrade attributes",
+  "tooltip.forgero.section.ingredients": "Ingredients",
   "tooltip.forgero.section.features": "Features",
+  "tooltip.forgero.section.conditions": "Conditions",
   "tooltip.forgero.hold": "Hold [",
   "tooltip.forgero.shift": "Shift",
   "tooltip.forgero.to_show_attributes": "] to show attributes",
+  "tooltip.forgero.to_show_tool_structure": "] to show tool information",
   "tooltip.forgero.feature.vein_mining": "Vein Mining",
   "tooltip.forgero.feature.block_breaking_pattern": "Pattern Mining",
   "tooltip.forgero.feature.effective_blocks": "Effectiveness",
@@ -127,6 +131,8 @@
   "tooltip.forgero.feature.soul_reaping": "Soul Reaping",
   "tooltip.forgero.feature.soul_binding": "Soul Binding",
   "tooltip.forgero.feature.magnetic": "Magnetic",
+  "tooltip.forgero.feature.unbreakable": "Unbreakable",
+  "tooltip.forgero.feature.broken": "Broken",
   "tooltip.forgero.depth": "Depth",
   "tooltip.forgero.section.all": "All",
   "tooltip.forgero.section.utility": "Utility",
@@ -149,5 +155,8 @@
   "tooltip.forgero.tag.minecraft.mineable.hoe": "Hoe",
   "tooltip.forgero.tag.minecraft.mineable.sword": "Sword",
   "tooltip.forgero.tag.minecraft.base_stone_nether": "Nether Blocks",
-  "tooltip.forgero.tag.minecraft.base_stone_overworld": "Stone Blocks"
+  "tooltip.forgero.tag.minecraft.base_stone_overworld": "Stone Blocks",
+  "attribute.name.generic.mining_speed": "Mining Speed",
+  "attribute.name.generic.mining_level": "Mining Level",
+  "attribute.name.generic.durability": "Durability"
 }
