Removed old conditions writer

--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -38,7 +38,6 @@
   "item.forgero.mining_speed": "Mining speed",
   "item.forgero.armor": "Armor",
   "item.forgero.slots": "Slots",
-  "item.forgero.material_count": " Materials: %s",
   "item.forgero.attributes": "Attributes",
   "item.forgero.properties": "Properties",
   "item.forgero.vein_mining": "Vein Mining",
@@ -119,6 +118,7 @@
   "tooltip.forgero.section.ingredients": "Ingredients",
   "tooltip.forgero.section.features": "Features",
   "tooltip.forgero.section.conditions": "Conditions",
+  "tooltip.forgero.material_count": "Materials: %s",
   "tooltip.forgero.hold": "Hold [",
   "tooltip.forgero.shift": "Shift",
   "tooltip.forgero.to_show_attributes": "] to show attributes",
