--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -45,5 +45,6 @@
   "condition.forgero.tempered": "Tempered",
   "condition.forgero.tough": "Tough",
   "condition.forgero.trimmed": "Trimmed",
-  "condition.forgero.rare": "Rare"
+  "condition.forgero.rare": "Rare",
+  "condition.forgero.unbreakable": "Unbreakable"
 }
