Added Area tooltip as well as a tagwriter

--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -134,6 +134,7 @@
   "tooltip.forgero.feature.unbreakable": "Unbreakable",
   "tooltip.forgero.feature.broken": "Broken",
   "tooltip.forgero.depth": "Depth",
+  "tooltip.forgero.area": "Area",
   "tooltip.forgero.section.all": "All",
   "tooltip.forgero.section.utility": "Utility",
   "tooltip.forgero.section.offensive": "Offensive",
@@ -149,13 +150,18 @@
   "tooltip.forgero.attribute.attack_speed": "Attack speed",
   "tooltip.forgero.attribute.armor": "Armor",
   "tooltip.forgero.against": "Against: ",
+  "tooltip.forgero.list_separator": "Against: ",
   "tooltip.forgero.tag.minecraft.mineable.pickaxe": "Pickaxe",
   "tooltip.forgero.tag.minecraft.mineable.axe": "Axe",
   "tooltip.forgero.tag.minecraft.mineable.shovel": "Shovel",
   "tooltip.forgero.tag.minecraft.mineable.hoe": "Hoe",
   "tooltip.forgero.tag.minecraft.mineable.sword": "Sword",
+  "tooltip.forgero.tag.forgero.vein_mining_ores": "Ores",
+  "tooltip.forgero.tag.forgero.vein_mining_sand": "Sand",
+  "tooltip.forgero.tag.forgero.plants": "Plants",
   "tooltip.forgero.tag.minecraft.base_stone_nether": "Nether Blocks",
   "tooltip.forgero.tag.minecraft.base_stone_overworld": "Stone Blocks",
+  "tooltip.forgero.tag.minecraft.logs": "Log Blocks",
   "attribute.name.generic.mining_speed": "Mining Speed",
   "attribute.name.generic.mining_level": "Mining Level",
   "attribute.name.generic.durability": "Durability"
