--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -146,8 +146,8 @@
   "tooltip.forgero.attribute.durability": "Durability",
   "tooltip.forgero.attribute.mining_level": "Mining level",
   "tooltip.forgero.attribute.rarity": "Rarity",
-  "tooltip.forgero.attribute.mining_speed": "Mining speed",
-  "tooltip.forgero.attribute.attack_speed": "Attack speed",
+  "tooltip.forgero.attribute.mining_speed": "Mining Speed",
+  "tooltip.forgero.attribute.attack_speed": "Attack Speed",
   "tooltip.forgero.attribute.armor": "Armor",
   "tooltip.forgero.against": "Against: ",
   "tooltip.forgero.list_separator": "Against: ",
