--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -38,7 +38,6 @@
   "item.forgero.mining_speed": "Mining speed",
   "item.forgero.armor": "Armor",
   "item.forgero.slots": "Slots",
-  "item.forgero.material_count": " Materials: %s",
   "item.forgero.attributes": "Attributes",
   "item.forgero.properties": "Properties",
   "item.forgero.vein_mining": "Vein Mining",
@@ -111,5 +110,59 @@
   "item.forgero.axehead": "Axehead",
   "item.forgero.schematic": "Schematic",
   "item.forgero.dense": "Dense",
-  "item.forgero.reinforced": "Reinforced"
+  "item.forgero.reinforced": "Reinforced",
+  "tooltip.forgero.section.slots": "Slots",
+  "tooltip.forgero.section.attributes": "Attributes",
+  "tooltip.forgero.section.base_attributes": "Base attributes",
+  "tooltip.forgero.section.upgrade_attributes": "Upgrade attributes",
+  "tooltip.forgero.section.ingredients": "Ingredients",
+  "tooltip.forgero.section.features": "Features",
+  "tooltip.forgero.section.conditions": "Conditions",
+  "tooltip.forgero.material_count": "Materials: %s",
+  "tooltip.forgero.hold": "Hold [",
+  "tooltip.forgero.shift": "Shift",
+  "tooltip.forgero.to_show_attributes": "] to show attributes",
+  "tooltip.forgero.to_show_tool_structure": "] to show tool information",
+  "tooltip.forgero.feature.vein_mining": "Vein Mining",
+  "tooltip.forgero.feature.block_breaking_pattern": "Pattern Mining",
+  "tooltip.forgero.feature.effective_blocks": "Effectiveness",
+  "tooltip.forgero.feature.golden": "Golden",
+  "tooltip.forgero.feature.emissive": "Emissive",
+  "tooltip.forgero.feature.soul_reaping": "Soul Reaping",
+  "tooltip.forgero.feature.soul_binding": "Soul Binding",
+  "tooltip.forgero.feature.magnetic": "Magnetic",
+  "tooltip.forgero.feature.unbreakable": "Unbreakable",
+  "tooltip.forgero.feature.broken": "Broken",
+  "tooltip.forgero.depth": "Depth",
+  "tooltip.forgero.area": "Area",
+  "tooltip.forgero.section.all": "All",
+  "tooltip.forgero.section.utility": "Utility",
+  "tooltip.forgero.section.offensive": "Offensive",
+  "tooltip.forgero.section.defensive": "Defensive",
+  "tooltip.forgero.section.section_separator": ":",
+  "tooltip.forgero.separator": ":",
+  "tooltip.forgero.attribute.multiplier": "x",
+  "tooltip.forgero.attribute.attack_damage": "Attack Damage",
+  "tooltip.forgero.attribute.durability": "Durability",
+  "tooltip.forgero.attribute.mining_level": "Mining level",
+  "tooltip.forgero.attribute.rarity": "Rarity",
+  "tooltip.forgero.attribute.mining_speed": "Mining Speed",
+  "tooltip.forgero.attribute.attack_speed": "Attack Speed",
+  "tooltip.forgero.attribute.armor": "Armor",
+  "tooltip.forgero.against": "Against: ",
+  "tooltip.forgero.list_separator": "Against: ",
+  "tooltip.forgero.tag.minecraft.mineable.pickaxe": "Pickaxe",
+  "tooltip.forgero.tag.minecraft.mineable.axe": "Axe",
+  "tooltip.forgero.tag.minecraft.mineable.shovel": "Shovel",
+  "tooltip.forgero.tag.minecraft.mineable.hoe": "Hoe",
+  "tooltip.forgero.tag.minecraft.mineable.sword": "Sword",
+  "tooltip.forgero.tag.forgero.vein_mining_ores": "Ores",
+  "tooltip.forgero.tag.forgero.vein_mining_sand": "Sand",
+  "tooltip.forgero.tag.forgero.plants": "Plants",
+  "tooltip.forgero.tag.minecraft.base_stone_nether": "Nether Blocks",
+  "tooltip.forgero.tag.minecraft.base_stone_overworld": "Stone Blocks",
+  "tooltip.forgero.tag.minecraft.logs": "Log Blocks",
+  "attribute.name.generic.mining_speed": "Mining Speed",
+  "attribute.name.generic.mining_level": "Mining Level",
+  "attribute.name.generic.durability": "Durability"
 }
