Completed the scrollable widget

--- a/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -16,5 +16,6 @@
   "forgero.menu.options.enableRepairKits": "Enable repair kits",
   "forgero.menu.options.resourceLogging": "Resource logging",
   "forgero.menu.options.logDisabledPackages": "Log disabled packages",
-  "forgero.menu.options.useEntityAttributes": "Entity attributes"
+  "forgero.menu.options.useEntityAttributes": "Entity attributes",
+  "forgero.menu.options.baseSoulLevelRequirement": "Base soul level"
 }
