Added simple oak handle

--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.forgero.scrappy_binding": "Scrappy Binding",
+  "item.forgero.simple_handle": "Simple Handle",
   "item.forgero.string": "String",
   "item.forgero.vines": "Vines",
   "item.forgero.twisting_vines": "Twisting Vines",
