--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -159,6 +159,7 @@
   "tooltip.forgero.tag.minecraft.mineable.sword": "Sword",
   "tooltip.forgero.tag.forgero.vein_mining_ores": "Ores",
   "tooltip.forgero.tag.forgero.vein_mining_sand": "Sand",
+  "tooltip.forgero.tag.forgero.vein_mining_dirt": "Dirt",
   "tooltip.forgero.tag.forgero.plants": "Plants",
   "tooltip.forgero.tag.minecraft.base_stone_nether": "Nether Blocks",
   "tooltip.forgero.tag.minecraft.base_stone_overworld": "Stone Blocks",
