--- a/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -30,6 +30,7 @@
   "item.forgero.phantom_membrane": "Phantom Membrane",
   "item.forgero.diamond": "Diamond",
   "item.forgero.netherite": "Netherite",
+  "item.forgero.soft_binding": "Soft Binding",
   "condition.forgero.carved": "Carved",
   "condition.forgero.durable": "Durable",
   "condition.forgero.hardened": "Hardened",
