--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -125,6 +125,7 @@
   "tooltip.forgero.to_show_tool_structure": "] to show tool information",
   "tooltip.forgero.feature.vein_mining": "Vein Mining",
   "tooltip.forgero.feature.block_breaking_pattern": "Pattern Mining",
+  "tooltip.forgero.feature.column_mining": "Column Mining",
   "tooltip.forgero.feature.effective_blocks": "Effectiveness",
   "tooltip.forgero.feature.golden": "Golden",
   "tooltip.forgero.feature.emissive": "Emissive",
@@ -160,6 +161,7 @@
   "tooltip.forgero.tag.forgero.vein_mining_ores": "Ores",
   "tooltip.forgero.tag.forgero.vein_mining_sand": "Sand",
   "tooltip.forgero.tag.forgero.vein_mining_dirt": "Dirt",
+  "tooltip.forgero.tag.forgero.vein_mining_logs": "Logs",
   "tooltip.forgero.tag.forgero.plants": "Plants",
   "tooltip.forgero.tag.minecraft.base_stone_nether": "Nether Blocks",
   "tooltip.forgero.tag.minecraft.base_stone_overworld": "Stone Blocks",
