Updated some missing entries

--- a/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -16,6 +16,7 @@
   "item.forgero.magnetico": "Magnetico",
   "item.forgero.quartz": "Quartz",
   "item.forgero.tsuba_sword_guard": "Tsuba Guard",
+  "item.forgero.tsuba_sword_guard": "Tsuba Guard",
   "item.forgero.duelling_sword_guard": "Duelling Guard",
   "item.forgero.agile_sword_guard": "Agile Guard",
   "item.forgero.polar_bear_pelt": "Polar Bear Pelt",
