Filled out pages for all properties

--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -134,6 +134,7 @@
   "tooltip.forgero.feature.magnetic": "Magnetic",
   "tooltip.forgero.feature.unbreakable": "Unbreakable",
   "tooltip.forgero.feature.broken": "Broken",
+  "tooltip.forgero.feature.undying_revival": "Undying",
   "tooltip.forgero.depth": "Depth",
   "tooltip.forgero.area": "Area",
   "tooltip.forgero.section.all": "All",
