Fixed reinforced -> refined

--- a/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric/src/main/resources/assets/forgero/lang/en_us.json
@@ -96,7 +96,7 @@
   "item.forgero.knifehead": "Knife Blade",
   "item.forgero.tachihead": "Tachi Blade",
   "item.forgero.dense_handle": "Dense Handle",
-  "item.forgero.reinforced_handle": "Reinforced Handle",
+  "item.forgero.reinforced_handle": "Refined Handle",
   "item.forgero.kimiri_binding": "Kimiri Binding",
   "item.forgero.tsuba_binding": "Tsuba Binding",
   "item.forgero.pattern_axe": "Axe",
