--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -16,7 +16,6 @@
   "item.forgero.magnetico": "Magnetico",
   "item.forgero.quartz": "Quartz",
   "item.forgero.tsuba_sword_guard": "Tsuba Guard",
-  "item.forgero.tsuba_sword_guard": "Tsuba Guard",
   "item.forgero.duelling_sword_guard": "Duelling Guard",
   "item.forgero.agile_sword_guard": "Agile Guard",
   "item.forgero.polar_bear_pelt": "Polar Bear Pelt",
@@ -48,6 +47,10 @@
   "description.forgero.mastercrafted_pickaxe_head": "A truly masterfully designed pickaxe head, better in every way",
   "item.forgero.path_mining_pickaxe_head": "Path Mining Pickaxe Head",
   "description.forgero.path_mining_pickaxe_head": "A unique pickaxe head, capable of mining a perfect corridor",
+  "item.forgero.refined_shovel_head": "Refined Shovel Head",
+  "description.forgero.refined_shovel_head": "A classic, but significantly improved shovel head",
+  "item.forgero.mastercrafted_shovel_head": "Mastercrafted Shovel Head",
+  "description.forgero.mastercrafted_shovel_head": "A truly masterfully designed shovel head, better in every way",
   "item.forgero.adamantite": "Adamantite",
   "item.forgero.aquarium": "Aquarium",
   "item.forgero.banglum": "Banglum",
