--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -16,6 +16,8 @@
   "item.forgero.magnetico": "Magnetico",
   "item.forgero.quartz": "Quartz",
   "item.forgero.tsuba_sword_guard": "Tsuba Guard",
+  "item.forgero.refined_sword_guard": "Refined Sword Guard",
+  "item.forgero.mastercrafted_sword_guard": "Mastercrafted Sword Guard",
   "item.forgero.duelling_sword_guard": "Duelling Guard",
   "item.forgero.agile_sword_guard": "Agile Guard",
   "item.forgero.polar_bear_pelt": "Polar Bear Pelt",
@@ -40,6 +42,11 @@
   "item.forgero.lightweight_pickaxe_head": "Lightweight Pickaxe Head",
   "description.forgero.lightweight_pickaxe_head": "A light, yet powerful pickaxe head",
   "item.forgero.refined_pickaxe_head": "Refined Pickaxe Head",
+  "item.forgero.refined_axe_head": "Refined Axe Head",
+  "item.forgero.refined_axe": "Refined Axe",
+  "item.forgero.mastercrafted_axe_head": "Mastercrafted Axe Head",
+  "item.forgero.mastercrafted_axe": "Mastercrafted Axe",
+  "item.forgero.refined_handle": "Refined Handle",
   "item.forgero.ore_miner_pickaxe_head": "Ore Mining Pickaxe Head",
   "item.forgero.reaper_head": "Reaper Head",
   "item.forgero.refined_hoe_head": "Refined Hoe Head",
