--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -32,10 +32,10 @@
   "item.forgero.sacrificial_dagger_blade": "Sacrificial Dagger Blade",
   "item.forgero.slanted_sword_blade": "Slanted Sword Blade",
   "item.forgero.battle_axe_head": "Battle Axe Head",
-  "item.forgero.tree_chopper_head": "Tree Chopper Head",
-  "item.forgero.tree_feller_head": "Tree Feller Head",
-  "item.forgero.path_digger_shovel_head": "Path Digger Head",
-  "item.forgero.grave_digger_head": "Grave Digger Head",
+  "item.forgero.tree_chopper_head": "Tree Chopper Axe Head",
+  "item.forgero.tree_feller_head": "Tree Feller Axe Head",
+  "item.forgero.path_digger_shovel_head": "Path Digger Shovel Head",
+  "item.forgero.grave_digger_head": "Grave Digger Shovel Head",
   "item.forgero.lightweight_pickaxe_head": "Lightweight Pickaxe Head",
   "description.forgero.lightweight_pickaxe_head": "A light, yet powerful pickaxe head",
   "item.forgero.refined_pickaxe_head": "Refined Pickaxe Head",
