Added Butter, Missing from Mythic Metals

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -49,6 +49,7 @@
   "item.forgero.aquarium": "Aquarium",
   "item.forgero.banglum": "Banglum",
   "item.forgero.bronze": "Bronze",
+  "item.forgero.butter": "Butter",
   "item.forgero.carmot": "Carmot",
   "item.forgero.celestium": "Celestium",
   "item.forgero.hallowed": "Hallowed",
