Fixed Duplicate Entry

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -49,7 +49,6 @@
   "item.forgero.aquarium": "Aquarium",
   "item.forgero.banglum": "Banglum",
   "item.forgero.bronze": "Bronze",
-  "item.forgero.butter": "Butter",
   "item.forgero.carmot": "Carmot",
   "item.forgero.celestium": "Celestium",
   "item.forgero.hallowed": "Hallowed",
@@ -57,7 +56,7 @@
   "item.forgero.kyber": "Kyber",
   "item.forgero.manganese": "Manganese",
   "item.forgero.metallurgium": "Metallurgium",
-  "item.forgero.midasgold": "Midas Gold",
+  "item.forgero.butter": "Midas Gold",
   "item.forgero.mythril": "Mythril",
   "item.forgero.orichalcum": "Orichalcum",
   "item.forgero.osmium": "Osmium",
