--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -82,5 +82,26 @@
   "item.forgero.therrassium": "Therrassium",
   "item.forgero.nether_quartz": "Nether Quartz",
   "item.forgero.certus_quartz": "Certus Quartz",
-  "item.forgero.fluix": "Fluix"
+  "item.forgero.fluix": "Fluix",
+  "item.forgero.common_ingot": "§aCommon",
+  "item.forgero.uncommon_ingot": "§eUncommon",
+  "item.forgero.wonderful_ingot": "§bWonderful",
+  "item.forgero.excellent_ingot": "§dExcellent",
+  "item.forgero.perfect_ingot": "§cPerfect",
+  "item.forgero.infinity_ingot": "§cI§6n§ef§ai§9n§bi§5t§cy",
+  "item.forgero.essence_planks": "§aEssence Planks",
+  "item.forgero.uncommon_planks": "§eUncommon Planks",
+  "item.forgero.wonderful_planks": "§bWonderful Planks",
+  "item.forgero.excellent_planks": "§dExcellent Planks",
+  "item.forgero.perfect_planks": "§cPerfect Planks",
+  "item.forgero.essence_stone": "§aEssence Stone",
+  "item.forgero.uncommon_stone": "§eUncommon Stone",
+  "item.forgero.wonderful_stone": "§bWonderful Stone",
+  "item.forgero.excellent_stone": "§dExcellent Stone",
+  "item.forgero.perfect_stone": "§cPerfect Stone",
+  "item.forgero.essence_cobble": "§aEssence Cobblestone",
+  "item.forgero.uncommon_cobble": "§eUncommon Cobblestone",
+  "item.forgero.wonderful_cobble": "§bWonderfulCobblestone",
+  "item.forgero.excellent_cobble": "§dExcellent Cobblestone",
+  "item.forgero.perfect_cobble": "§cPerfect Cobblestone"
 }
