--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -103,5 +103,29 @@
   "item.forgero.uncommon_cobble": "§eUncommon Cobblestone",
   "item.forgero.wonderful_cobble": "§bWonderful Cobblestone",
   "item.forgero.excellent_cobble": "§dExcellent Cobblestone",
-  "item.forgero.perfect_cobble": "§cPerfect Cobblestone"
+  "item.forgero.perfect_cobble": "§cPerfect Cobblestone",
+  "item.forgero.piglin_shovel_head": "Piglin Shovel Head",
+  "item.forgero.piglin_sword_blade": "Piglin Sword Blade",
+  "item.forgero.piglin_hoe_head": "Piglin Hoe Head",
+  "item.forgero.piglin_axe_head": "Piglin Axe Head",
+  "item.forgero.piglin_pickaxe_head": "Piglin Pickaxe Head",
+  "item.forgero.piglin_shovel": "Piglin Shovel",
+  "item.forgero.piglin_sword": "Piglin Sword",
+  "item.forgero.piglin_hoe": "Piglin Hoe",
+  "item.forgero.piglin_pommel": "Piglin Pommel",
+  "item.forgero.anchor_tree": "Anchor Tree",
+  "item.forgero.black_vine": "Black Vine",
+  "item.forgero.blooming_vine": "Blooming Vine",
+  "item.forgero.cincinnasite": "Cincinnasite",
+  "item.forgero.golden_vine": "Golden Vine",
+  "item.forgero.mushroom_fir": "Mushroom Fir",
+  "item.forgero.nether_mushroom": "Nether Mushroom",
+  "item.forgero.nether_reed": "Nether Reed",
+  "item.forgero.nether_ruby": "Nether Ruby",
+  "item.forgero.nether_sakura": "Nether Sakura",
+  "item.forgero.rubeus": "Rubeus",
+  "item.forgero.stalagnate": "Stalagnate",
+  "item.forgero.wart": "Wart",
+  "item.forgero.willow": "Willow"
 }
+
