--- a/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-vanilla/src/main/resources/assets/forgero/lang/en_us.json
@@ -21,6 +21,7 @@
   "item.forgero.copper": "Copper",
   "item.forgero.flint": "Flint",
   "item.forgero.obsidian": "Obsidian",
+  "item.forgero.crying_obsidian": "Crying Obsidian",
   "item.forgero.quartz": "Quartz",
   "item.forgero.diorite": "Diorite",
   "item.forgero.granite": "Granite",
