scale and crying

--- a/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-extended/src/main/resources/assets/forgero/lang/en_us.json
@@ -21,6 +21,7 @@
   "item.forgero.duelling_sword_guard": "Duelling Guard",
   "item.forgero.agile_sword_guard": "Agile Guard",
   "item.forgero.polar_bear_pelt": "Polar Bear Pelt",
+  "item.forgero.ender_dragon_scale": "Ender Dragon Scale",
   "item.forgero.katana_blade": "Katana Blade",
   "item.forgero.broadsword_blade": "Broadsword Blade",
   "item.forgero.shortsword_blade": "Shortsword Blade",
