--- a/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
+++ b/fabric/forgero-fabric-core/src/main/resources/assets/forgero/lang/en_us.json
@@ -54,6 +54,7 @@
   "itemGroup.forgero.tools": "Tools",
   "itemGroup.forgero.parts": "Parts",
   "itemGroup.forgero.schematics": "Schematics",
+  "itemGroup.forgero.gems": "Gems",
   "item.forgero.scabbard": "Scabbard",
   "item.forgero.empty_repair_kit": "Empty Repair Kit",
   "item.forgero.spiked_binding": "Spiked Binding",
