* Added support for sticks variants

--- a/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/content/forgero-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -126,6 +126,7 @@
   "item.forgero.rubeus": "Rubeus",
   "item.forgero.stalagnate": "Stalagnate",
   "item.forgero.wart": "Wart",
-  "item.forgero.willow": "Willow"
+  "item.forgero.willow": "Willow",
+  "item.forgero.stick": "Stick"
 }
 
